# pennylane-codecamp-2022

./: .flake8  pyproject.toml  setup_env.sh
100-explorer/: Differentiable ZNE: Noisy circuits.py  Fourier spectrum of quantum models: Building a model.py  Gradients: The parameter-shift rule.py  Quantum transforms and noise: Energy dissipation.py  Universality: Working with one qubit.py
200-adventurer/: Differentiable ZNE: Global circuit folding.py  Fourier spectrum of quantum models - Distance in Fourier space.py  Gradients: A four-term parameter-shift rule.py  Quantum transforms and noise: A faulty superconducting device.py  Universality: U3 and CNOT decomposition.py
500-pioneer/: Quantum transforms and noise: Maximizing fidelity.py  Universality: H, T and CNOT decomposition.py
